@@ -1,3 +1,6 @@
+Mon, 18 Sep 2006 23:04:59 +0200 <informancer@web.de>
+	* Added ChannelList and tests
+
 Sun, 10 Sep 2006 22:34:44 +0200 <informancer@web.de>
 	* moved channel update code to channel.
 	* moved rssparser to libpodcast to avoid circular imports.
